[tool.poetry]
name = "lwill"
version = "0.1.0"
description = "API to trigger a confirmation message and send some documents if you are unable to answer."
authors = ["Erick G. Islas-Osuna <erickisos653@gmail.com>"]
readme = "README.md"
license = "GPLv3"
packages = [{ include = "lwill", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = { extras = ["dataclasses"], version = "^2.8.2" }

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
black = { version = "^24.8.0", allow-prereleases = true }
isort = "^5.13.2"
bandit = "^1.7.9"
flake8 = "^7.1.1"
pytest = "^8.3.2"
pre-commit = "^3.8.0"
codecov = "^2.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ['py39']
preview = true
exclude = '''
/(
    /.git
  | /.mypy_cache
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
plugins = "pydantic.mypy"
